# SiegeEngine

./: .env  .gitignore  AGENT.md  PLAN.md  README.md  plan.md  siege-engine-2-input-doc.md
siege-engine/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  migrate-volume.sh  pyproject.toml
siege-engine/alembic/: env.py
siege-engine/alembic/versions/: 7ecd24d05694_add_input_documents_and_propagation_run.py  a1_drop_v1_leftover_cols.py  a1b2c3d4e5f6_add_component_definition_unique_index.py  b10_is_foundation.py  b11_vocab_tier.py  b12_ref_tier.py  b13_review_text.py  b14_staleness_ledger.py  b15_is_deferred.py  b16_review_batches.py  b17_draft_discard_reason.py  b18_draft_change_summary.py  b19_failure_surface_fragment.py  b1_v2_foundation.py  b20_job_is_deferred.py  b21_layered_fragment_kinds.py  b22_batches_table.py  b23_cohorts.py  b24_cohort_experimental_comp_ids.py  b25_project_source.py  b2_expansion_tier.py  b2c3d4e5f6a7_add_event_sourcing_tables.py  b3_vocab_extension.py  b4_generation_telemetry.py  b5_policies_tier.py  b6_subreqs_tier.py  b7_feature_metadata.py  b8_project_settings.py  b9_decomposition_edge.py  c1_input_docs_git.py  c2_refs_git.py  c3_drop_legacy_write_tables.py  c3d4e5f6a7b8_add_pipeline_run_scoping_columns.py  cdcacf370e4d_initial_schema.py  d4e5f6a7b8c9_add_extended_snapshot_columns.py  d4e5f6a7b8c9_add_generation_completed_at.py  e5f6a7b8c9d0_add_jobs_queued_dedup_index.py  e5f6a7b8c9d0_add_pending_only.py  e8c940cb23d7_add_jobs_table.py  f6a7b8c9d0e1_add_configurable_timeouts.py  (+7 more)
siege-engine/backend/: config.py  database.py  main.py  models.py
siege-engine/backend/auth/: routes.py  schemas.py  service.py
siege-engine/backend/chat/: routes.py  service.py
siege-engine/backend/cli/: claude_md_template.md  config.py  extractor.py  manager.py  reconstruct.py
siege-engine/backend/comments/: routes.py
siege-engine/backend/dag/: routes.py  schemas.py  service.py
siege-engine/backend/git_manager/: service.py
siege-engine/backend/github/: oauth.py  service.py
siege-engine/backend/graph/: __init__.py  apply_instruction.py  batches.py  bootstrap_routes.py  broadcast.py  cohort_routes.py  cohort_sampler.py  debug_routes.py  diff.py  events.py  expansion.py  fanout.py  fragments.py  ids.py  input_documents_routes.py  instructions.py  jobs_routes.py  per_comp_reset.py  queries.py  queue.py  queue_routes.py  reducer.py  references.py  references_git_routes.py  regen_context.py  requirements.py  review.py  review_summary.py  routes.py  running.py  staleness.py  subrequirements.py  sysarch.py  tier_ops_routes.py  tier_structure.py  vocabulary.py  vocabulary_git_routes.py
siege-engine/backend/models/: __init__.py  artifact.py  auth.py  batch.py  chat.py  cohort.py  cohort_sampler_config.py  enums.py  graph_event.py  input_document.py  job.py  node.py  pending_instruction.py  pipeline.py  pipeline_events.py  project.py  review.py  telemetry.py
siege-engine/backend/pipeline/: artifact_ops.py  checkpoint.py  component_manager.py  defaults.py  engine.py  event_store.py  events.py  llm_limiter.py  queue.py  readiness.py  reconcile.py  reducer.py  routes.py  routes_action.py  routes_input_docs.py  routes_pipeline.py  routes_prompt.py  routes_stage.py  schemas.py  seed_snapshots.py  stage_execution.py  summarize.py
siege-engine/backend/projects/: import_service.py  migrate_legacy.py  routes.py  schemas.py  service.py  settings.py
siege-engine/backend/websocket/: log_handler.py  manager.py
siege-engine/docs/: cheatsheet.md  commercial-boundary.md
siege-engine/docs/architecture/: v2-rearchitecture.md  v2-roadmap.md  v3-spec.md
siege-engine/docs/design-notes/: presentational-generation-ordering.md
siege-engine/docs/migration/: deletion-inventory.md  mcp-surface.md  state-schema.md  status.md
siege-engine/docs/plans/: phase-14-plan.md
siege-engine/frontend/: README.md  package-lock.json  package.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
siege-engine/frontend/src/: App.tsx  index.css  main.tsx
siege-engine/scripts/: make_sample_project.py  siege-bootstrap.sh
siege-engine/seed-docs/: CATAPULT_REQUIREMENTS.md  catapult-default-bundle-v3-examples.md  catapult-default-bundle-v3.md  catapult-default-bundle-v4-examples.md  catapult-default-bundle-v4.md  catapult-spec-v2.md  catapult-spec-v3.md  catapult-spec-v4.md  catapult-spec.md  forgewright-project-doc.md  plan.md  siege_engine_multi_seed.md
siege-engine/siege/: __init__.py  auth.py  auth_context.py  auth_lookup.py  backend_client.py  cli.py  config.py  git_view.py  manifest.py  propagation.py  review_summary.py  sample_project.py  server.py  state.py  tools.py  validate.py
siege-engine/siege/parsers/: __init__.py  review_xml.py  xml_sections.py
siege-engine/siege_mcp/: __init__.py  auth.py  auth_context.py  auth_lookup.py  cli.py  config.py  fragments.py  git_view.py  manifest.py  plan.py  review_summary.py  server.py  state.py  structure.py  tools.py  validate.py
siege-engine/tests/: conftest.py  test_auth_service.py  test_clone_project.py  test_code_extractor.py  test_config.py  test_dag_service.py  test_exception_handler.py  test_extract_components.py  test_git_manager.py  test_llm_limiter.py  test_models.py  test_pipeline_defaults.py  test_pipeline_engine.py  test_prune_artifact.py  test_prune_descendants.py  test_reconcile.py  test_reducer_reset.py  test_reparse_fanout.py  test_run_completion.py  test_stage_execution.py  test_websocket_manager.py
wg-tracker/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  config.yaml  docker-entrypoint.sh  pyproject.toml
wg-tracker/.do/: app.yaml
wg-tracker/alembic/: env.py
wg-tracker/tests/: conftest.py  test_auth.py  test_clean.py  test_drafts.py  test_llm_parsing.py  test_mail_parser.py  test_pipeline.py  test_threads.py  test_web.py
wg-tracker/wgtracker/: __init__.py  cli.py  config.py  costs.py  db.py  logging_conf.py  mcp_server.py  models.py  pipeline.py  queries.py
(+784 files in other folders)
