[project]
name = "siege-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-anthropic>=0.3",
    "gitpython>=3.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models use string forward references for cross-model relationships
"backend/models/*.py" = ["F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# plugins = ["pydantic.mypy"]  # Enable once pydantic mypy plugin supports mypy >=1.19

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
