[project]
name = "siege-engine"
version = "0.1.0"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
# The `siege` core is pure stdlib — installing the package with no
# extras pulls zero dependencies, enough for the CLI's *write*
# subcommands. The `[read]` extra adds the read-side projection's deps;
# the bootstrap installs it so skills can run both halves of the CLI.
dependencies = []

[project.optional-dependencies]
# The read-side projection (siege.projection / siege.git_view) — what
# the CLI's read subcommands (get-context, compute-plan, …) need. The
# write subcommands stay dependency-free; the bootstrap installs this
# extra so a skill environment has the whole CLI.
read = [
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
# Everything needed to *run* the deployed app — the dashboard server
# and the legacy backend, which still ship together until the
# backend's deletion (migration step 8).
app = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-anthropic>=0.3",
    "gitpython>=3.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "sse-starlette>=2.1",
]
dev = [
    "siege-engine[app]",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "siege*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models use string forward references for cross-model relationships
"backend/models/*.py" = ["F821"]

[tool.ruff.lint.isort]
# The repo has a top-level ``alembic/`` directory for migrations, which
# ruff otherwise misclassifies as first-party and splits it from the
# ``alembic.config`` imports it appears next to. Force it into the
# third-party group so ``from alembic import command`` and
# ``from alembic.config import Config`` stay together.
known-third-party = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "siege/tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# plugins = ["pydantic.mypy"]  # Enable once pydantic mypy plugin supports mypy >=1.19

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
