[project]
name = "wg-tracker"
version = "0.1.0"
description = "IETF Working Group Activity Tracker — structured, citable archive of working-group thread summaries"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dateutil>=2.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "httpx>=0.27",
]

[project.scripts]
wgtracker = "wgtracker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wgtracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501: long lines are fine; UP042: the `str, Enum` mix is intentional (clean
# JSON/DB serialization and SQLAlchemy Enum compatibility).
ignore = ["E501", "UP042"]
